<resources>
    <string name="app_name">CityChat</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="main_activity">Watched rooms</string>
    <string name="please_login">Please login for full features</string>
    <string name="please_login_yes">Yes, login</string>
    <string name="please_login_no">No, do it later</string>
    <string name="confirm_select_chat">Please confirm selected chat:</string>
    <string name="confirm_select_chat_yes">Yes, confirm</string>
    <string name="confirm_select_chat_no">No, give chance</string>
    <string name="say_chat">Please say something to chat:</string>
    <string name="say_chat_yes">Post</string>
    <string name="say_chat_no">No</string>
    <string name="add_room">Please enter name of new room:</string>
    <string name="add_room_yes">Make room</string>
    <string name="add_room_no">No</string>
    <string name="add_city">Do you want to add this city:</string>
    <string name="add_city_yes">Yes, add</string>
    <string name="add_city_no">No</string>
    <string name="no_user">Someone</string>
    <string name="no_login">Not authorised</string>
    <string name="google_name">Google Name: %s</string>
    <string name="google_user">Google User: %s</string>
    <string name="signed_out">Signed Out</string>
    <string name="loading">Loading…</string>
    <string name="sign_out">Sign Out</string>
    <string name="disconnect">Disconnect</string>
    <string name="auth">auth</string>
    <string name="start_main">Start CityChat</string>
    <string name="google_title_text">Sign In with Google</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="title_activity_google_login">Login</string>
    <string name="title_activity_chat_view">Chat view</string>
    <string name="title_activity_select_chat">Select chat</string>
    <string name="choice_city">Select city</string>
    <string name="choice_room">Select room for:</string>
    <string name="chat_view">Chat - </string>
    <string name="i_need_permision">If you reject permission,you can not use this service\\n\\nPlease turn on permissions at [Setting] > [Permission]></string>
    <string name="no_last_location">No location detected. Please try again!</string>
    <string name="database_error">Warning have some Database Error</string>
    <string name="already_have_city">Already have city:</string>
    <string name="permission_deny">Permission Denied \n</string>
    <string name="connection_failed">Connection failed</string>
    <string name="authentication_failed">Authentication failed</string>
    <string name="google_play_service_error">Google Play Services error</string>
    <string name="post_just_now">Just now</string>
    <string name="seconds_ago"> sec. ago</string>
    <string name="less_day_ago">at:</string>
    <string name="swipe_unsubscribe">Unsubscribe chat</string>
    <string name="search_title">Search</string>
    <string name="search_hint">Search Hint</string>
    <string name="google_title_text_loged">You are logged in</string>
    <string name="last_post_at">Last post at:</string>
    <string name="number_of_chats">Rooms:</string>
    <string name="set_password">Please enter crypto word</string>
    <string name="set_password_yes">Use it!</string>
    <string name="set_password_no">No</string>
    <string name="error_crypto">Error in crypto</string>
    <string name="share_app">Let\'s try CityChat http://www.ibm.com/</string>
    <string name="share_room">\\n Recommend to you room:</string>
    <string name="copy_right">CityChat is published under GPL3 \n Developed by Andriy Hooke %1$d</string>
    <string name="title_about_page">It\'s a freeware, with open source copyright. Be free to use that source codes for a good  deeds. \n
    Special thanks for:\n
    \"Glide\" by Sam Judd - @sjudd on GitHub\n
    \"TedPermission\" - Copyright 2016 Ted Park\n
    \"MaterialSearchView\" - Copyright 2015 Miguel Catalan Bañuls \n
    \"Android About Page\" Copyright 2016 Mehdi Sakout\n
    icons8.com, for a icons\n
    Firebase and Android by Google inc.\n
    </string>
    <string name="description_about_page">Use CityChat for free communication with many people. Just select City, Room and enjoy. If your city is not listed, you can add it using you geoposition. Also you can add room for any city. </string>
    <string name="contacts_about_page">You can contact with us, using:</string>
    <string name="email_about_page">citychat@zoho.eu</string>
    <string name="web_about_page">https://play.google.com/store/apps/details?id=com.hooke.citychat</string>
    <string name="playstore_about_page">com.hooke.citychat</string>
    <string name="github_about_page">hooke72/citychat</string>
    <string name="title_activity_settings_page">Settings</string>
    <string name="message_is_crypted">Message is crypted!</string>
</resources>

