<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_100"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:weightSum="4">

        <ImageView
            android:id="@+id/google_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/icon_bottom_margin"
            android:layout_marginTop="@dimen/icon_top_margin"
            android:contentDescription="@string/desc_firebase_lockup"
            android:src="@drawable/common_google_signin_btn_icon_light" />

        <TextView
            android:id="@+id/title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/title_bottom_margin"
            android:text="@string/google_title_text"
            android:theme="@style/ThemeOverlay.MyTitleText" />

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <com.google.android.gms.common.SignInButton
                android:id="@+id/sign_in_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:visibility="visible"
                tools:visibility="gone" />

            <Button
                android:id="@+id/sign_out_button"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:text="@string/sign_out"
                android:theme="@style/ThemeOverlay.MyDarkButton" />

        </RelativeLayout>

        <ImageView
            android:id="@+id/user_logo"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginBottom="@dimen/icon_bottom_margin"
            android:layout_marginTop="@dimen/icon_top_margin"
            android:contentDescription="@string/desc_firebase_lockup"
            android:src="@drawable/common_google_signin_btn_icon_light" />

        <TextView
            android:id="@+id/user_email"
            style="@style/ThemeOverlay.MyTextDetail"
            android:text="@string/signed_out" />

        <TextView
            android:id="@+id/user_name"
            style="@style/ThemeOverlay.MyTextDetail"
            tools:text="@string/signed_out" />

        <Button
            android:id="@+id/start_main"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/start_main"
            android:theme="@style/ThemeOverlay.MyDarkButton" />

</LinearLayout>
